--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta content="Free Website Template" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    
+    <link rel="icon" type="image/png" href="/img/imagen_2023-10-27_202037664.png"
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
