--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Favicon -->
     
-    <link rel="icon" type="image/png" href="/img/imagen_2023-10-27_202037664.png"
+    <link rel="icon" type="image/png" href="/img/imagen_2023-10-27_202037664.png">
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
